--- a/Ecommerce/EcommerceUI/src/app/Components/carousel/carousel.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/carousel/carousel.component.html
@@ -4,7 +4,7 @@
       <input type="radio" name="radio-buttons" id="img-1" checked />
       <li class="slide-container">
         <div class="slide-image">
-          <img src="assets/images/carousel1.png" />
+          <img src="assets/images/car1.webp" />
         </div>
         <div class="carousel-controls">
           <label for="img-3" class="prev-slide">
@@ -18,7 +18,7 @@
       <input type="radio" name="radio-buttons" id="img-2" />
       <li class="slide-container">
         <div class="slide-image">
-          <img src="assets/images/carousel2.png" />
+          <img src="assets/images/car2.jpg" />
         </div>
         <div class="carousel-controls">
           <label for="img-1" class="prev-slide">
@@ -32,7 +32,7 @@
       <input type="radio" name="radio-buttons" id="img-3" />
       <li class="slide-container">
         <div class="slide-image">
-          <img src="assets/images/carousel3.png" />
+          <img src="assets/images/car3.jpg" />
         </div>
         <div class="carousel-controls">
           <label for="img-2" class="prev-slide">
@@ -51,3 +51,4 @@
     </ul>
   </div>
 </div>
+
