--- a/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
@@ -68,11 +68,11 @@
         xlink:href="#gentle-wave"
         x="48"
         y="0"
-        fill="rgba(112, 193, 179,0.5"
+        fill="rgba(251, 99, 126,0.5"
       />
-      <use xlink:href="#gentle-wave" x="48" y="3" fill="#70C1B3" />
-      <use xlink:href="#gentle-wave" x="48" y="5" fill="#3c736a" />
-      <use xlink:href="#gentle-wave" x="48" y="7" fill="#70C1B3" />
+      <use xlink:href="#gentle-wave" x="48" y="3" fill="#877bd3" />
+      <use xlink:href="#gentle-wave" x="48" y="5" fill="#5e549b" />
+      <use xlink:href="#gentle-wave" x="48" y="7" fill="#fb637e" />
     </g>
   </svg>
 </div>
