--- a/Ecommerce/EcommerceUI/src/app/Components/carousel/carousel.component.css
+++ b/Ecommerce/EcommerceUI/src/app/Components/carousel/carousel.component.css
@@ -1,12 +1,13 @@
 .carousel {
   margin: 0%;
+
 }
 
 ul.slides {
   display: block;
   position: relative;
   height: 600px;
-  margin-bottom: -250px;
+  margin-bottom: -175px;
   padding: 0;
   overflow: hidden;
   list-style: none;
@@ -40,8 +41,9 @@ ul.slides input {
 }
 
 .slide-image img {
-  width: 100%;
-  height: 50%;
+  width: 95%;
+  height: 70%;
+  margin: 32px;
 }
 
 .carousel-controls {
@@ -51,8 +53,9 @@ ul.slides input {
   right: 0;
   z-index: 999;
   font-size: 100px;
-  line-height: 260px;
+  line-height: 450px;
   color: #fff;
+  margin: 15px;
 }
 
 .carousel-controls label {
