--- a/Ecommerce/EcommerceUI/src/app/Components/header/header.component.css
+++ b/Ecommerce/EcommerceUI/src/app/Components/header/header.component.css
@@ -39,15 +39,16 @@ h5,
 h6 {
   margin: 0 0 15px;
 }
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .header-area {
-  background: none repeat scroll 0 0  rgb(112, 193, 179);
+  background: linear-gradient(to right, rgb(251, 99, 126) 0, #5e549b 100%);
 }
 .header-area a {
-  color: rgb(74, 84, 66);
+  color: white;
 }
 .user-menu ul {
   list-style: outside none none;
@@ -60,7 +61,7 @@ body {
 .user-menu li a {
   display: block;
   font-size: 13px;
-  margin-right: 5px;
+  margin-right: 7px;
   padding: 10px;
 }
 .user-menu li a i.fa {
@@ -147,7 +148,7 @@ body {
 }
 
 .shopping-item:hover {
-  background: none repeat scroll 0 0 yellowgreen;
+  background: none repeat scroll 0 0 #f5ea77;
   border-color: #5a88ca;
 }
 .shopping-item:hover a {
@@ -184,7 +185,7 @@ header {
   display: flex !important;
   justify-content: space-evenly;
   place-items: center;
-  background-color: #3c736a;
+  background-color: #8cd0e3;
   z-index: 2;
   padding-top: 10px;
 }
@@ -195,13 +196,14 @@ header nav button {
   font-family: quicksand;
   color: white;
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 1.2em;
+  font-weight: bold;
   cursor: pointer;
   transition-delay: 0s;
   transition-duration: 1s;
 }
 header nav button:hover {
-  color: yellowgreen;
+  color: #f5ea77;
   transform: translate(0px, -4px);
   text-shadow: 0 6px 6px rgba(0, 0, 0, 1);
 }
@@ -210,7 +212,7 @@ header nav button:hover {
   height: 50px;
   border-radius: 25px;
   border: 0;
-  background-color: yellowgreen;
+  background-color: #f5ea77;
   color: white;
   font-family: montserrat;
   cursor: pointer;
