--- a/Ecommerce/EcommerceUI/src/app/Components/pages/signup/signup.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/pages/signup/signup.component.html
@@ -10,9 +10,9 @@
     <div class="row main-content bg-success text-center">
       <div class="col-md-4 text-center company__info">
         <span class="company__logo"
-          ><h2><span class="fa fa-android"></span></h2
+          ><h2><img src="assets/images/applogo.png" /></h2
         ></span>
-        <h4 class="company_title">Your Company Logo</h4>
+        <h4 class="company_title">Register Here!!</h4>
       </div>
       <div class="col-md-8 col-xs-12 col-sm-12 login_form">
         <div class="container-fluid">
