--- a/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
@@ -1,37 +1,26 @@
-<head>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+
+<div>
 <app-search (searchTextChanged)="onSearchTextEntered($event)"></app-search>
-<!-- <div class="dropdown">
-	<button class="btn btn-secondary dropdown-toggle" name="Filter" [(ngModel)]="Filter"type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	  Filter
-	</button>
-	<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-	  <a class="dropdown-item" href="#">productofferprice</a>
-	  <a class="dropdown-item" href="#">productrating</a>
-	  <a class="dropdown-item" href="#">productname</a>
-	</div>
-  </div> -->
-  <label>Sort by &nbsp;</label>
+  <label>Sort&nbsp;</label>
   <select [(ngModel)]="SortbyParam">
 	<option value="productofferprice">Price</option>
 	<option value="productrating">Rating</option>
 	<option value="productname">A-Z</option>
-  </select>
-  
-  <button type="button" (click)="onSortDirection()">
-	<i *ngIf="SortDirection==='asc'" class="arrow-up">⇅	
-		&#8645;</i>
-	<i class="arrow-down" *ngIf="SortDirection==='desc'"></i>
+  </select> 
+  <button type="button" (click)="onSortDirection()">&#8645;
+	<i *ngIf="SortDirection==='asc'">
+		</i>
+	<i *ngIf="SortDirection==='desc'"></i>
   </button>
+</div>
 		<div class="row">
 			<div class="product--green" *ngFor="let prd of productList | ProductNameSearch: searchText |sort:[SortbyParam,SortDirection]" >
 				<div class='product_inner'>	 
 				<img src={{prd.imagepath}}  routerLink="/product-detail/{{prd.productid}}" width='300' alt="prdimg">
 				<h3>{{prd.productname}}</h3>
-				<p>{{ prd.productrating }}</p>
-				<p>{{ prd.price | currency: "INR" }}</p>
-				<p>{{ prd.productofferprice | currency: "INR" }}</p>
+				<p>Rating : {{ prd.productrating }}</p>
+				<p><s>{{ prd.price | currency: "INR" }}</s></p>
+				<p style="font-size:x-large;">{{ prd.productofferprice | currency: "INR" }}</p>
 				<button (click)="submit(prd.productid)">Add to Cart</button>
 				<button (click)="submittowishlist(prd.productid)">Add to wishlist</button>
 	 			</div>
