order history implemented fully

--- a/Ecommerce/EcommerceUI/src/app/Components/admin/order-history/order-history.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin/order-history/order-history.component.html
@@ -10,11 +10,11 @@
     </thead>
     <tbody>
       <tr *ngFor="let ord of orderList">
-        <td>{{ ord.UserId }}</td>
-        <td><img src="{{ ord.Imagepath }} "  height="20%" width="20%"/></td>
-        <td>{{ ord.ProductName }}</td>
-        <td>{{ ord.TotalPrice }}</td>
-        <td>{{ ord.OrderDate }}</td>
+        <td>{{ ord.userId }}</td>
+        <td><img src="{{ ord.imagepath }} "  height="20%" width="20%"/></td>
+        <td>{{ ord.productName }}</td>
+        <td>{{ ord.totalPrice }}</td>
+        <td>{{ ord.orderDate }}</td>
       </tr>
     </tbody>
   </table>
