Implementation of JWT

--- a/Ecommerce/EcommerceUI/src/app/Components/pages/login/login.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/pages/login/login.component.html
@@ -37,7 +37,7 @@
                   id="username"
                   class="form__input"
                   placeholder="Username"
-                  [(ngModel)]="credentials.username"
+                  ngModel
                   required
                 />
               </div>
@@ -48,7 +48,7 @@
                   id="password"
                   class="form__input"
                   placeholder="Password"
-                  [(ngModel)]="credentials.password"
+                  ngModel
                   required
                 />
               </div>
