--- a/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
@@ -1,4 +1,3 @@
-
 <div class="header-area">
   <div class="container">
     <div class="row">
@@ -15,8 +14,13 @@
               <a href="/shoppingcart"><i class="fa fa-user"></i> My Cart</a>
             </li>
 
-            <li>
+            <li *ngIf="!isUserAuthenticated()">
               <a href="/login"><i class="fa fa-user"></i> Login</a>
+            </li>
+            <li *ngIf="isUserAuthenticated()">
+              <a href="/login" (click)="logOut()"
+                ><i class="fa fa-user"></i> Logout</a
+              >
             </li>
           </ul>
         </div>
