Implementation of JWT Authentication with auth guard service.

--- a/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
@@ -5,7 +5,7 @@
         <div class="user-menu">
           <ul>
             <li>
-              <a href="#"><i class="fa fa-user"></i> My Account</a>
+              <a href="#"><i class="fa fa-user"></i> Home</a>
             </li>
             <li>
               <a href="/products"><i class="fa fa-heart"></i> Products</a>
