Update profile and lint fixes

--- a/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
@@ -1,32 +1,43 @@
-
 <div>
-<app-search (searchTextChanged)="onSearchTextEntered($event)"></app-search>
+  <app-search (searchTextChanged)="onSearchTextEntered($event)"></app-search>
   <label>Sort&nbsp;</label>
   <select [(ngModel)]="SortbyParam">
-	<option value="productofferprice">Price</option>
-	<option value="productrating">Rating</option>
-	<option value="productname">A-Z</option>
-  </select> 
-  <button type="button" (click)="onSortDirection()">&#8645;
-	<i *ngIf="SortDirection==='asc'">
-		</i>
-	<i *ngIf="SortDirection==='desc'"></i>
+    <option value="productofferprice">Price</option>
+    <option value="productrating">Rating</option>
+    <option value="productname">A-Z</option>
+  </select>
+  <button type="button" (click)="onSortDirection()">
+    &#8645;
+    <i *ngIf="SortDirection === 'asc'"> </i>
+    <i *ngIf="SortDirection === 'desc'"></i>
   </button>
 </div>
-		<div class="row">
-			<div class="product--green" *ngFor="let prd of productList | ProductNameSearch: searchText |sort:[SortbyParam,SortDirection]" >
-				<div class='product_inner'>	 
-				<img src={{prd.imagepath}}  routerLink="/product-detail/{{prd.productid}}" width='300' alt="prdimg">
-				<h3>{{prd.productname}}</h3>
-				<p>Rating : {{ prd.productrating }}</p>
-				<p><s>{{ prd.price | currency: "INR" }}</s></p>
-				<p style="font-size:x-large;">{{ prd.productofferprice | currency: "INR" }}</p>
-				<button (click)="submit(prd.productid)">Add to Cart</button>
-				<button (click)="submittowishlist(prd.productid)">Add to wishlist</button>
-	 			</div>
-  			</div>
-  		</div>
-	
-
-
-
+<div class="row">
+  <div
+    class="product--green"
+    *ngFor="
+      let prd of productList
+        | ProductNameSearch: searchText
+        | sort: [SortbyParam, SortDirection]
+    "
+  >
+    <div class="product_inner">
+      <img
+        src="{{ prd.imagepath }}"
+        routerLink="/product-detail/{{ prd.productid }}"
+        width="300"
+        alt="prdimg"
+      />
+      <h3>{{ prd.productname }}</h3>
+      <p>Rating : {{ prd.productrating }}</p>
+      <p>
+        <s>{{ prd.price | currency: "INR" }}</s>
+      </p>
+      <p style="font-size: x-large">
+        {{ prd.productofferprice | currency: "INR" }}
+      </p>
+      <button (click)="submit(prd.productid)">Add to Cart</button>
+      <button (click)="submittowishlist(prd.productid)">Add to wishlist</button>
+    </div>
+  </div>
+</div>
