--- a/Ecommerce/EcommerceUI/src/app/search/search.component.html
+++ b/Ecommerce/EcommerceUI/src/app/search/search.component.html
@@ -5,23 +5,30 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
+  />
 </head>
 <body>
- <div class="container">
-  <div class="row">    
-   <div class="col-xs-8 col-xs-offset-2">
-    <div class="input-group">    
-    <input type="text" class="form-control"[(ngModel)]="enteredSearchValue"(input)="onSearchText()" placeholder="Search"> 
-     <span class="input-group-btn">
-       <button class="btn btn-default" type="button">
-         <span class="glyphicon glyphicon-search"></span>
-       </button>
-   </span>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-2">
+        <div class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            [(ngModel)]="enteredSearchValue"
+            (input)="onSearchText()"
+            placeholder="Search"
+          />
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="button">
+              <span class="glyphicon glyphicon-search"></span>
+            </button>
+          </span>
+        </div>
+      </div>
     </div>
-   </div>
   </div>
-</div>
-
 </body>
-
