--- a/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
@@ -1,4 +1,3 @@
-
 <div class="header-area">
   <div class="container">
     <div class="row">
@@ -6,7 +5,9 @@
         <div class="user-menu">
           <ul>
             <li>
-              <a href="#"><i class="fa fa-user"></i> My Account</a>
+              <a href="/update-profile"
+                ><i class="fa fa-user"></i> My Account</a
+              >
             </li>
             <li>
               <a href="/wishlist"><i class="fa fa-heart"></i> Wishlist</a>
