--- a/Ecommerce/EcommerceUI/src/app/Components/admin/add-product/add-product.component.css
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin/add-product/add-product.component.css
@@ -18,12 +18,12 @@ body {
   font-size: 12px;
   line-height: 30px;
   color: #777;
-  background: #4CAF50;
+  background: #4caf50;
 }
 
 .container {
-  max-width: 400px;
-  width: 100%;
+  max-width: 700px;
+  width: 90%;
   margin: 0 auto;
   position: relative;
 }
@@ -38,10 +38,11 @@ body {
 }
 
 #contact {
-  background: #F9F9F9;
-  padding: 25px;
-  margin: 150px 0;
+  background: rgb(251, 99, 126, 0.2);
+  padding: 35px;
+  margin: 50px 0;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  border-radius: 20px;
 }
 
 #contact h3 {
@@ -73,7 +74,7 @@ fieldset {
 #contact textarea {
   width: 100%;
   border: 1px solid #ccc;
-  background: #FFF;
+  background: #fff;
   margin: 0 0 5px;
   padding: 10px;
 }
@@ -99,15 +100,15 @@ fieldset {
   cursor: pointer;
   width: 100%;
   border: none;
-  background: #4CAF50;
-  color: #FFF;
+  background: #4caf50;
+  color: #fff;
   margin: 0 0 5px;
   padding: 10px;
   font-size: 15px;
 }
 
 #contact button[type="submit"]:hover {
-  background: #43A047;
+  background: #43a047;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out;
@@ -141,4 +142,8 @@ fieldset {
 
 :-ms-input-placeholder {
   color: #888;
+}
+.btn {
+  background-color: #5a88ca;
+  padding: 5px;
 }
