--- a/Ecommerce/EcommerceUI/src/app/Components/admin-dashboard/admin-header/admin-header.component.css
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin-dashboard/admin-header/admin-header.component.css
@@ -46,6 +46,7 @@ body {
 
 .header-area {
   background: linear-gradient(to right, rgb(251, 99, 126) 0, #5e549b 100%);
+  height: 30px;
 }
 .header-area a {
   color: white;
@@ -112,55 +113,10 @@ body {
 .logo h1 a span {
   color: #5a88ca;
 }
-.shopping-item {
-  border: 1px solid rgb(255, 255, 255);
-  float: right;
-  font-size: 18px;
 
-  padding: 10px;
-  position: relative;
-}
-.shopping-item a {
-  color: rgb(255, 255, 255);
-}
-.cart-amunt {
-  color: #5a88ca;
-  font-weight: 700;
-}
+
+
 /* Navbar hover */
-
-.product-count {
-  background: none repeat scroll 0 0 #5a88ca;
-  border-radius: 50%;
-  color: #fff;
-  display: inline-block;
-  font-size: 10px;
-  height: 20px;
-  padding-top: 2px;
-  position: absolute;
-  right: -10px;
-  text-align: center;
-  top: -10px;
-  width: 20px;
-}
-.shopping-item i.fa {
-  margin-left: 15px;
-}
-
-.shopping-item:hover {
-  background: none repeat scroll 0 0 #f5ea77;
-  border-color: #5a88ca;
-}
-.shopping-item:hover a {
-  color: #fff;
-  text-decoration: none;
-}
-.shopping-item:hover .cart-amunt {
-  color: #fff;
-}
-.shopping-item:hover .product-count {
-  background: none repeat scroll 0 0 #000;
-}
 
 .mainmenu-area ul.navbar-nav li a {
   color: #6e6a6a;
@@ -182,15 +138,15 @@ header {
   width: 100%;
   top: 0;
   margin-bottom: -50px;
-  display: flex !important;
-  justify-content: space-evenly;
-  place-items: center;
+  /* display: flex !important;
+  justify-content:;
+  place-items: center; */
   background-color: #8cd0e3;
   z-index: 2;
   padding-top: 10px;
 }
 
-header nav button {
+header  button {
   background-color: transparent;
   border: 0;
   font-family: quicksand;
@@ -201,12 +157,13 @@ header nav button {
   cursor: pointer;
   transition-delay: 0s;
   transition-duration: 1s;
+
 }
-header nav button:hover {
+header button:hover {
+  color: #f5ea77;
   transform: translate(0px, -4px);
   text-shadow: 0 6px 6px rgba(0, 0, 0, 1);
 }
-
 .order-online {
   width: 200px;
   height: 50px;
@@ -222,6 +179,16 @@ header nav button:hover {
   transform: translate(0px, -4px);
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2);
 }
+
+.btn{
+  border: 1px solid rgb(255, 255, 255);
+  float: right;
+  font-size: 18px;
+
+  padding: 10px;
+  position: relative;
+}
+
 
 /* WAVES BENEATH HEADER */
 
@@ -254,6 +221,7 @@ header nav button:hover {
   animation-delay: -5s;
   animation-duration: 17s;
 }
+
 @keyframes move-forever {
   0% {
     transform: translate3d(-90px, 0, 0);
