--- a/Ecommerce/EcommerceUI/src/app/Components/admin/list-product/list-product.component.css
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin/list-product/list-product.component.css
@@ -1,97 +1,52 @@
 
 
-table {
-    width: 100%;
+  body {
+    color: #666;
+    font: 14px/24px "Open Sans", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", Sans-Serif;
   }
-  table thead tr {
-    background: #dcd5c5 url('/Global/Images/parchment-bkg.jpg') repeat;
+  table {
+    border-collapse: separate;
+    border-spacing: 0;
+    width: 96%;
+    margin:20px;
+    margin-top: 45px;
   }
-  table thead tr.Vertical {
-    background-image: url('/Global/Images/parchment-bkg-rotated.jpg');
+  th,
+  td {
+    padding: 6px 15px;
   }
-  table thead tr h1,
-  table thead tr h2,
-  table thead tr .h1,
-  table thead tr .h2,
-  table thead tr h3,
-  table thead tr .h3,
-  table thead tr h4,
-  table thead tr .h4 {
-    color: #151515;
+  th {
+    background: #5a88ca;
+    color: #fff;
+    text-align: center;
   }
-  table thead tr a {
-    color: #0075b0;
+  tr:first-child th:first-child {
+    border-top-left-radius: 6px;
   }
-  table thead tr a:hover,
-  table thead tr a:focus {
-    color: white;
+  tr:first-child th:last-child {
+    border-top-right-radius: 6px;
   }
-  table tbody tr:nth-of-type(even) {
-    background: #e2e2e2;
+  td {
+    border-right: 1px solid #c6c9cc;
+    border-bottom: 1px solid #c6c9cc;
+    text-align: center;
   }
-  table td,
-  table th {
-    padding: 8px 14px;
-    text-align: left;
-    font-size: 1.2rem;
+  td:first-child {
+    border-left: 1px solid #c6c9cc;
   }
-  table td a,
-  table th a {
-    font-weight: bold;
-    color: #00918a !important;
+  tr:nth-child(odd) td {
+    background:  rgb(251, 99, 126,0.2);
   }
-  table td a:hover,
-  table th a:hover,
-  table td a:focus,
-  table th a:focus {
-    color: white !important;
+  tr:nth-child(even) td {
+    background:  rgb(140, 208, 227,0.2);
   }
-  table th {
-    font-weight: 700;
-    font-size: 1.2rem;
-    line-height: 1.4;
-    font-family: "Gotham SSm A", "Gotham SSm B", Helvetica, sans-serif;
-    text-transform: uppercase;
-    margin: 0;
-    max-width: 800px;
-    line-height: inherit;
-    color: #151515;
+
+  tr:last-child td:first-child {
+    border-bottom-left-radius: 6px;
   }
-  table th.PrimaryFont {
-    text-transform: none;
+  tr:last-child td:last-child {
+    border-bottom-right-radius: 6px;
   }
-  
-  
-  @media only screen and (max-width: 599px) {
-    table th {
-      display: none;
-    }
-    table td {
-      position: relative;
-      display: block;
-      padding-left: 110px;
-    }
-    table td:before {
-      position: absolute;
-      top: 8px;
-      left: 10px;
-      display: block;
-      content: attr(data-label) ": ";
-      font-weight: 700;
-    }
-    table tbody tr {
-      padding: 20px 0;
-      display: block;
-    }
-    table:nth-of-type(odd) {
-      background: #f3f3f3;
-    }
-  }
-  
-  /* For display in CodePen */
-  body { padding: 20px; }
-  table { border-collapse: collapse; }
-  .btn{
-    margin: 2px;
-  }
-  
+.btn{
+  margin:5px;
+}
