--- a/Ecommerce/EcommerceUI/src/app/Components/wishlist/wishlist-container/wishlist-container.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/wishlist/wishlist-container/wishlist-container.component.html
@@ -1,6 +1,6 @@
-<div class="container" style="padding-top: 6rem" *ngIf="wishlist">
+<div class="container" style="padding-top: 6rem; margin-bottom: 60px;" *ngIf="wishlist">
   <div class="card shopping-cart">
-    <div class="card-header bg-dark text-light">
+    <div class="card-header text-light" style="background-color: #5a88ca;">
       <i class="fa fa-heart-o pr-2" aria-hidden="true"></i>
       Wishlist
       <div class="clearfix"></div>
