--- a/Ecommerce/EcommerceUI/src/app/Components/wishlist/wishlist-item/wishlist-item.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/wishlist/wishlist-item/wishlist-item.component.html
@@ -34,7 +34,7 @@
       </button>
     </div>
     <div class="col-4 col-sm-4 col-md-4 text-right">
-      <button class="btn btn-success" type="button" (click)="addToCart()">
+      <button class="btn btn-success"  style="background-color: rgb(251, 99, 126);"  type="button" (click)="addToCart() ">
         Add to Cart
       </button>
     </div>
