--- a/Ecommerce/EcommerceUI/src/app/app.component.html
+++ b/Ecommerce/EcommerceUI/src/app/app.component.html
@@ -1,7 +1,8 @@
-<app-header></app-header>
-<!-- <app-products></app-products> -->
+<!-- <app-admin-header *ngIf="showHeader"></app-admin-header> -->
+<app-header  ></app-header>
+<router-outlet></router-outlet>
+
 <app-footer></app-footer>
 
-<router-outlet></router-outlet>
 
 
