login before updating profile feature,sort css

--- a/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.css
+++ b/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.css
@@ -88,3 +88,12 @@ p {
   font-family: "Times New Roman", Times, serif;
   color: darkslategrey;
 }
+.sortbutton{
+  width: 40px;
+}
+.sortoption{
+  margin-left: 40px;
+  padding: 2px;
+
+}
+
