--- a/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/Products/products.component.html
@@ -1,12 +1,13 @@
 <div>
   <app-search (searchTextChanged)="onSearchTextEntered($event)"></app-search>
-  <label>Sort&nbsp;</label>
-  <select [(ngModel)]="SortbyParam">
+  
+  <select [(ngModel)]="SortbyParam" class="sortoption">
+    <option [ngValue]="null"selected disabled>Sort by</option>
     <option value="productofferprice">Price</option>
     <option value="productrating">Rating</option>
     <option value="productname">A-Z</option>
   </select>
-  <button type="button" (click)="onSortDirection()">
+  <button type="button" (click)="onSortDirection()"class="sortbutton">
     &#8645;
     <i *ngIf="SortDirection === 'asc'"> </i>
     <i *ngIf="SortDirection === 'desc'"></i>
