--- a/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
@@ -35,6 +35,28 @@
 </div>
 
 <!-- End header area -->
+<header>
+  <h1 class="logo">
+    <img src="assets/images/applogo.png" height="20px" />
+  </h1>
+  <nav>
+    <button><a href="/home" style="color: rgb(255, 255, 255)">Home</a></button>
+
+    <button>
+      <a routerLink="/products" style="color: rgb(255, 255, 255)">Products</a>
+    </button>
+
+    <button><a routerLink="/contact" style="color: rgb(255, 255, 255)">Contact</a></button>
+  </nav>
+  <div class="shopping-item">
+    <a href="/shoppingcart"
+      >Cart
+      <i class="fa fa-shopping-cart"></i>
+      <span class="product-count">{{ quantity }}</span></a
+    >
+  </div>
+</header>
+
 
 <div>
   <svg
