Fixed spelling and Added router link

--- a/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
@@ -38,7 +38,7 @@
       <a routerLink="/products" style="color: rgb(255, 255, 255)">Products</a>
     </button>
 
-    <button>Contact</button>
+    <button routerLink="/contact">Contact</button>
   </nav>
   <div class="shopping-item">
     <a href="/shoppingcart"
