--- a/Ecommerce/EcommerceUI/src/app/Components/contact/contact.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/contact/contact.component.html
@@ -7,7 +7,7 @@
                         <div class="col-md-10">
                             <div class="contact_form_inner">
                                 <div class="contact_field">
-                                    <h3>Contatc Us</h3>
+                                    <h3>Contact Us</h3>
                                     <p>Feel Free to contact us any time. We will get back to you as soon as we can!.</p>
                                     <button class="contact_form_submit" onclick= "document.location =  'mailto:dkshitijkumar98@gmail.com'">Email</button>
                                 </div>
