Fixed Footer and added admin dashboard

--- a/Ecommerce/EcommerceUI/src/app/Components/admin-dashboard/admin-dashboard.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin-dashboard/admin-dashboard.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
 <app-admin-header></app-admin-header>
-<p>It works
-</p>
+<h3>Welcome Admin!!</h3>
+<app-list-product></app-list-product>
