--- a/Ecommerce/EcommerceUI/src/app/Components/footer/footer.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/footer/footer.component.html
@@ -1,101 +1,78 @@
-<!-- Footer -->
+<router-outlet></router-outlet>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
+</head>
+<footer>
+  <div class="main">
+    <div class="col1">
+      <h3 class="heading">About the store</h3>
+      <ul>
+        <li>
+          <a href="/home"> Home </a>
+        </li>
+        <li>
+          <a href="#"> Become a customer </a>
+        </li>
+        <li>
+          <a href="#"> About us </a>
+        </li>
+        <li>
+          <a href="#"> FAQ </a>
+        </li>
+        <li>
+          <a href="#"> Return policy </a>
+        </li>
+        <li>
+          <a href="#"> Contact us </a>
+        </li>
+      </ul>
+    </div>
 
-<footer class="text-center text-white">
-    <!-- Grid container -->
-    <div class="container p-4">
-   
-  
-      <!-- Section: Form -->
-  
-      <!-- Section: Text -->
-      <section class="mb-4">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-          repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-          eum harum corrupti dicta, aliquam sequi voluptate quas.
-        </p>
-      </section>
-      <!-- Section: Text -->
-  
-      <!-- Section: Links -->
-      <section class="">
-        <!--Grid row-->
-        <div class="row">
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Links</h5>
-  
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!" class="text-white">Link 1</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Link 2</a>
-              </li>
-             
-            </ul>
-          </div>
-          <!--Grid column-->
-  
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Links</h5>
-  
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!" class="text-white">Link 1</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Link 2</a>
-              </li>
-              
-            </ul>
-          </div>
-          <!--Grid column-->
-  
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Links</h5>
-  
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!" class="text-white">Link 1</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Link 2</a>
-              </li>
-            
-            </ul>
-          </div>
-          <!--Grid column-->
-  
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Links</h5>
-  
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!" class="text-white">Link 1</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Link 2</a>
-              </li>
-             
-            </ul>
-          </div>
-          <!--Grid column-->
-        </div>
-        <!--Grid row-->
-      </section>
-      <!-- Section: Links -->
+    <div class="col2">
+      <h3 class="heading">Language</h3>
+      <div class="languages">
+        <a href="#">Deutsch</a>
+        <a href="#">English</a>
+        <a href="#">Espaṅol</a>
+        <a href="#">Français</a>
+        <a href="#">Indonesian</a>
+        <a href="#">Italian</a>
+        <a href="#">Nederlands</a>
+        <a href="#">Polnisch</a>
+        <a href="#">Português</a>
+        <a href="#">pyccknṅ</a>
+        <a href="#">Tiéng Viêt</a>
+        <a href="#">Türkçe</a>
+      </div>
     </div>
-    <!-- Grid container -->
- 
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2020 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+
+    <div class="col3">
+      <h3 class="heading">Get in touch</h3>
+      <div class="social">
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-pinterest"></a>
+        <a href="#" class="fa fa-reddit"></a>
+      </div>
     </div>
-    <!-- Copyright -->
-  </footer>
-  <!-- Footer -->
+  </div>
+
+  <p class="terms">
+    <a href="#">Terms of purchase</a>
+    <a href="#">Security and privacy</a>
+    <a href="#">Newsletter</a>
+  </p>
+</footer>
+
+<script
+  type="module"
+  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+></script>
+<script
+  nomodule
+  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+></script>
+
