--- a/Ecommerce/EcommerceUI/src/app/Components/admin-dashboard/admin-header/admin-header.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin-dashboard/admin-header/admin-header.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-8">
         <div class="user-menu">
-          
+
         </div>
       </div>
     </div>
@@ -18,12 +18,20 @@
     <img src="assets/images/applogo.png" height="20px" />
   </h1>
 
-    <button class="btn" style="float: right;">
-      <a routerLink="/add-product" style="color: rgb(255, 255, 255)">Add Product</a>
-    </button>
-    <button class="btn">
-      <a routerLink="/products" style="color: rgb(255, 255, 255)">Order History</a>
-    </button>
+  <button class="btn" style="float: right;">
+    <a routerLink="/admin" style="color: rgb(255, 255, 255)">Home</a>
+  </button>
+  <button class="btn" style="float: right;">
+    <a routerLink="/add-product" style="color: rgb(255, 255, 255)">Add Product</a>
+  </button>
+
+  <button class="btn">
+    <a routerLink="/products" style="color: rgb(255, 255, 255)">Order History</a>
+  </button>
+  <button class="btn" style="float: right;">
+    <a routerLink="/login" style="color: rgb(255, 255, 255)">Logout</a>
+  </button>
+
 </header>
 <div>
   <svg
