--- a/Ecommerce/EcommerceUI/src/app/Components/admin/add-product/add-product.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin/add-product/add-product.component.html
@@ -1,3 +1,5 @@
+<app-admin-header></app-admin-header>
+
 <div class="container">
     <form control="" id="contact"  class="form-group" [formGroup]="productForm">
       <h3 style="color: #5a88ca;">Welcome Admin!!</h3>
