--- a/Ecommerce/EcommerceUI/src/app/Components/admin/update-product/update-product.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin/update-product/update-product.component.html
@@ -1,3 +1,4 @@
+<app-admin-header></app-admin-header>
 <p>add-product works!</p>
 <div class="container">
     <form control="" id="contact"  class="form-group">
@@ -70,7 +71,7 @@
       <fieldset>
         <input name="Security"placeholder="Security" type="text"  class="form__input" [(ngModel)]="productData.security"/>
       </fieldset>
-  
+
       <fieldset>
         <input
           type="submit"
