--- a/Ecommerce/EcommerceUI/src/app/Components/pages/signup/signup.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/pages/signup/signup.component.html
@@ -10,7 +10,7 @@
     <div class="row main-content bg-success text-center">
       <div class="col-md-4 text-center company__info">
         <span class="company__logo"
-          ><h2><img src="assets/images/applogo.png" /></h2
+          ><h2><img src="assets/images/applogo.png" height="70px" /></h2
         ></span>
         <h4 class="company_title">Register Here!!</h4>
       </div>
