--- a/Ecommerce/EcommerceUI/src/app/app.component.html
+++ b/Ecommerce/EcommerceUI/src/app/app.component.html
@@ -1,5 +1,6 @@
-<!-- <app-admin-header *ngIf="showHeader"></app-admin-header> -->
+
 <app-header  ></app-header>
+<!-- <app-admin-header></app-admin-header> -->
 <router-outlet></router-outlet>
 
 <app-footer></app-footer>
