--- a/Ecommerce/EcommerceUI/src/app/Components/pages/login/login.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/pages/login/login.component.html
@@ -28,7 +28,7 @@
               (ngSubmit)="login(loginForm)"
             >
               <div *ngIf="invalidLogin" class="alert alert-danger">
-                Invalid usernAME OR Password
+                Invalid Username OR Password
               </div>
               <div class="row">
                 <input
