--- a/Ecommerce/EcommerceUI/src/app/Components/admin/order-history/order-history.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin/order-history/order-history.component.html
@@ -1,21 +1,21 @@
 <app-admin-header></app-admin-header>
 <table>
-    <thead>
-      <tr>
-        <th>User Id</th>
-        <th>Product Image</th>
-        <th>Product Name</th>
-        <th>Total Price</th>
-        <th>Order Date</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let ord of orderList">
-        <td>{{ ord.userId }}</td>
-        <td><img src="{{ ord.imagepath }} "  height="20%" width="40%"/></td>
-        <td>{{ ord.productName }}</td>
-        <td>{{ ord.totalPrice }}</td>
-        <td>{{ ord.orderDate }}</td>
-      </tr>
-    </tbody>
-  </table>
+  <thead>
+    <tr>
+      <th>User Id</th>
+      <th>Product Image</th>
+      <th>Product Name</th>
+      <th>Total Price</th>
+      <th>Order Date</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let ord of orderList">
+      <td>{{ ord.userId }}</td>
+      <td><img src="{{ ord.imagepath }} " height="70px" width="40%" /></td>
+      <td>{{ ord.productName }}</td>
+      <td>{{ ord.totalPrice }}</td>
+      <td>{{ ord.orderDate }}</td>
+    </tr>
+  </tbody>
+</table>
