--- a/Ecommerce/EcommerceUI/src/app/app.component.html
+++ b/Ecommerce/EcommerceUI/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header *ngif="!isAdmin()"></app-header>
+<app-header *ngIf="!isAdmin()"></app-header>
 <!-- <app-admin-header></app-admin-header> -->
 <router-outlet></router-outlet>
 
