Adding Website Name, alert button, fixing product details by id button

--- a/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/header/header.component.html
@@ -37,7 +37,7 @@
 <!-- End header area -->
 <header>
   <h1 class="logo">
-    <img src="assets/images/applogo.png" height="20px" />
+    <img src="assets/images/applogo.png" height="20px" /> MobiCart
   </h1>
   <nav>
     <button><a href="/home" style="color: rgb(255, 255, 255)">Home</a></button>
@@ -46,7 +46,9 @@
       <a routerLink="/products" style="color: rgb(255, 255, 255)">Products</a>
     </button>
 
-    <button><a routerLink="/contact" style="color: rgb(255, 255, 255)">Contact</a></button>
+    <button>
+      <a routerLink="/contact" style="color: rgb(255, 255, 255)">Contact</a>
+    </button>
   </nav>
   <div class="shopping-item">
     <a href="/shoppingcart"
@@ -56,7 +58,6 @@
     >
   </div>
 </header>
-
 
 <div>
   <svg
