--- a/Ecommerce/EcommerceUI/src/app/Components/admin-dashboard/admin-header/admin-header.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin-dashboard/admin-header/admin-header.component.html
@@ -12,7 +12,7 @@
 
 <header>
   <h1 class="logo">
-    <img src="assets/images/applogo.png" height="20px" />
+    <img src="assets/images/applogo.png" height="20px" />MobiCart
   </h1>
 
   <button class="btn" style="float: right">
