--- a/Ecommerce/EcommerceUI/src/app/update-profile/update-profile.component.html
+++ b/Ecommerce/EcommerceUI/src/app/update-profile/update-profile.component.html
@@ -1,9 +1,11 @@
 <div class="container">
   <form control="" id="contact" class="form-group">
-    <h3>Welcome</h3>
-    <h4>Profile</h4>
+    <h3>Welcome {{ userData.username }}</h3>
+    <h6 style="font-size: 12px">You can update your profile here</h6>
+    <br />
 
     <fieldset>
+      <label>Username</label><br />
       <input
         placeholder="User Name"
         name="User Name"
@@ -14,6 +16,7 @@
     </fieldset>
 
     <fieldset>
+      <label>Address</label>
       <input
         name="Address"
         placeholder="Address"
@@ -23,6 +26,7 @@
       />
     </fieldset>
     <fieldset>
+      <label>Email ID</label>
       <input
         name="emailid"
         placeholder="EmailId"
@@ -35,7 +39,7 @@
     <fieldset>
       <input
         type="submit"
-        value="Edit"
+        value="Update"
         class="btn btn-primary"
         (click)="update()"
       />
