changing username in order history table, display product when it is available

--- a/Ecommerce/EcommerceUI/src/app/Components/admin/order-history/order-history.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/admin/order-history/order-history.component.html
@@ -2,7 +2,8 @@
 <table>
   <thead>
     <tr>
-      <th>User Id</th>
+      <th>Sr No.</th>
+      <th>User Name</th>
       <th>Product Image</th>
       <th>Product Name</th>
       <th>Total Price</th>
@@ -10,8 +11,9 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let ord of orderList">
-      <td>{{ ord.userId }}</td>
+    <tr *ngFor="let ord of orderList; let i = index">
+      <td>{{ i + 1 }}</td>
+      <td>{{ ord.username }}</td>
       <td><img src="{{ ord.imagepath }} " height="70px" width="40%" /></td>
       <td>{{ ord.productName }}</td>
       <td>{{ ord.totalPrice }}</td>
