fixing routing after updating user profile

--- a/Ecommerce/EcommerceUI/src/app/Components/pages/login/login.component.html
+++ b/Ecommerce/EcommerceUI/src/app/Components/pages/login/login.component.html
@@ -28,7 +28,7 @@
               (ngSubmit)="login(loginForm)"
             >
               <div *ngIf="invalidLogin" class="alert alert-danger">
-                Invalid Username OR Password
+                User is not Registered, Please sign up
               </div>
               <div class="row">
                 <input
